# granola-sync

./: .gitattributes  .gitignore  Granola Sync Diario.bat  Granola Sync Diario.sh  Granola Sync Semanal.bat  Granola Sync Semanal.sh  README-export.md  README.md  config.example.yaml  granola-notes-macos.spec  granola-notes.spec  pyproject.toml
docs/: tutorial.html
scripts/: api_dump.json  dump_api_response.py  install_scheduled_task.ps1  run_sync.ps1
src/granola_sync/: __init__.py  __main__.py  cli.py  config.py  constants.py  logging_config.py  utils.py
src/granola_sync/api/: client.py  models.py
src/granola_sync/auth/: credentials.py  encrypted_storage.py  token_manager.py
src/granola_sync/converters/: html.py  prosemirror.py  template.py  transcript.py
src/granola_sync/enrichment/: claude_enricher.py
src/granola_sync/exporter/: __init__.py  md_formatter.py  runner.py  txt_formatter.py
src/granola_sync/gui/: __init__.py  __main__.py  app.py
src/granola_sync/sync/: dedup.py  engine.py  vault.py
tests/: conftest.py  test_client.py  test_credentials.py  test_daterange.py  test_dedup.py  test_engine.py  test_enricher.py  test_html.py  test_md_export.py  test_prosemirror.py  test_template.py  test_token_manager.py  test_txt_formatter.py
tests/fixtures/: sample_document.json  sample_prosemirror.json  sample_transcript.json
