[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "granola-obsidian-sync"
version = "1.0.0"
description = "Sync Granola meeting notes to Obsidian vault"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "python-slugify>=8.0",
    "thefuzz[speedup]>=0.22",
    "anthropic>=0.40",
    "rich>=13.0",
    "cryptography>=42.0",
    'pywin32>=306; sys_platform == "win32"',
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "freezegun>=1.4",
    "ruff>=0.6",
]
gui = [
    "pyinstaller>=6.0",
]

[project.scripts]
granola-sync = "granola_sync.cli:main"

[project.gui-scripts]
granola-notes-gui = "granola_sync.gui.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pyflakes, pycodestyle, isort, pyupgrade, flake8-bugbear
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length is enforced by the formatter, not the linter
